# sdkwork-terminal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.base.json  verify-output.txt  verify-output2.txt  vite.workspace-alias.mjs  vite.workspace-alias.ts
apps/sdkwork-terminal-pc/: .gitignore  AGENTS.md  COMMERCIALIZATION_IMPROVEMENT_PLAN.md  Cargo.toml  FINAL_COMMERCIAL_READINESS_REPORT.md  PRODUCTION_READINESS_REPORT.md  PROFESSIONAL_ANALYSIS_SUMMARY.md  README.md  index.desktop.html  index.html  index.web.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  tsconfig.base.json  tsconfig.desktop.json  tsconfig.json  tsconfig.web.json  vite.config.desktop.mjs  vite.config.ts  vite.config.web.mjs  vite.workspace-alias.mjs  vite.workspace-alias.ts
apps/sdkwork-terminal-pc/.sdkwork/: README.md
apps/sdkwork-terminal-pc/.sdkwork/plugins/: README.md
apps/sdkwork-terminal-pc/.sdkwork/skills/: README.md
apps/sdkwork-terminal-pc/apis/: README.md
apps/sdkwork-terminal-pc/apis/local-runtime/: README.md  openapi.yaml
apps/sdkwork-terminal-pc/apps/desktop/: README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.mjs
apps/sdkwork-terminal-pc/apps/web/: .env.example  README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.mjs
apps/sdkwork-terminal-pc/config/browser/: runtime-env.test.example.json
apps/sdkwork-terminal-pc/config/container/: terminal.development.toml.example  terminal.production.toml.example  terminal.staging.toml.example
apps/sdkwork-terminal-pc/config/desktop/: terminal.development.toml.example  terminal.production.toml.example  terminal.staging.toml.example  terminal.test.toml.example
apps/sdkwork-terminal-pc/config/server/: terminal.development.toml.example  terminal.production.toml.example
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-ai-cli-host/: Cargo.toml  README.md
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-config/: Cargo.toml
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-control-plane/: Cargo.toml
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-observability/: Cargo.toml
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-pty-runtime/: Cargo.toml
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-resource-connectors/: Cargo.toml  README.md
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-runtime-node/: Cargo.toml
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-session-runtime/: Cargo.toml  README.md
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-shell-integration/: Cargo.toml  README.md
apps/sdkwork-terminal-pc/crates/sdkwork-terminal-terminal-core/: Cargo.toml  README.md
apps/sdkwork-terminal-pc/deployments/docker/: compose.runtime-node.example.yml  runtime-node.Dockerfile
apps/sdkwork-terminal-pc/deployments/k8s/: README.md
apps/sdkwork-terminal-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-terminal-pc/public/: README.md
apps/sdkwork-terminal-pc/sdks/: README.md  sync-local-runtime-openapi.mjs
apps/sdkwork-terminal-pc/specs/: GOVERNANCE_EXCEPTIONS.md  README.md  component.spec.json  dependency.composition.json
apps/sdkwork-terminal-pc/src/: App.tsx  AuthGate.tsx  index.css  main.tsx  vite-env.d.ts
apps/sdkwork-terminal-pc/tests/: component-spec-alignment.test.mjs  connector-interactive-probe.test.ts  desktop-bootstrap-contract.test.mjs  desktop-host-commands.test.ts  desktop-local-process-contract.test.ts  desktop-package-boundary.test.ts  desktop-resource-catalog-state.test.ts  desktop-resource-launch.test.ts  desktop-runtime-bridge.test.ts  desktop-session-center-overlay.test.ts  desktop-session-center-refresh-machine.test.ts  desktop-session-center-refresh-policy.test.ts  desktop-session-center.test.ts  desktop-session-reattach.test.ts  desktop-session-replay-preload-policy.test.ts  desktop-tauri-permissions.test.ts  fallback-terminal-render.test.ts  launch-project-dialog-model.test.ts  local-runtime-openapi-route-parity.test.mjs  release-assets.test.mjs  release-plan.test.mjs  release-workflows.test.mjs  resource-center.test.ts  resources-panel.test.ts  run-tauri-cli.test.mjs  run-typescript-probes.test.mjs  run-vite-host.test.mjs  run-workspace-package-script.test.mjs  run-workspace-tests.test.mjs  runtime-contracts.test.ts  runtime-event-name-contract.test.ts  runtime-host-probe-mode.test.ts  runtime-tab-controller-store.test.ts  runtime-tab-controller.test.ts  runtime-terminal-stage.test.ts  sdkwork-terminal-utils-standard.test.mjs  session-center-menu-status.test.ts  session-center.test.ts  session-persistence-contract.test.mjs  session-recovery-probe.test.ts  (+40 more)
crates/sdkwork-terminal-control-plane/: Cargo.toml  README.md
crates/sdkwork-terminal-control-plane/specs/: README.md  component.spec.json
crates/sdkwork-terminal-control-plane/src/: lib.rs
crates/sdkwork-terminal-runtime-node/: Cargo.toml  README.md
crates/sdkwork-terminal-runtime-node/specs/: component.spec.json
crates/sdkwork-terminal-runtime-node/src/: host.rs  http.rs  lib.rs
crates/sdkwork-terminal-runtime-node/tests/: runtime_node_host_test.rs  runtime_node_http_test.rs
crates/sdkwork-terminal-session-runtime/: Cargo.toml
crates/sdkwork-terminal-session-runtime/specs/: component.spec.json
crates/sdkwork-terminal-session-runtime/src/: lib.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop-host.toml
src-tauri/permissions/autogenerated/: desktop-connector-exec-probe.toml  desktop-connector-launch.toml  desktop-daemon-health.toml  desktop-daemon-reconnect.toml  desktop-local-shell-session-input-bytes.toml  desktop-local-shell-session-resize.toml  desktop-session-attach.toml  desktop-session-attachment-acknowledge.toml  desktop-session-index.toml  desktop-session-replay-slice.toml  desktop-session-resize.toml
src-tauri/specs/: README.md  component.spec.json
src-tauri/src/: lib.rs  main.rs
(+935 files in other folders)
