[workspace]
members = [
  "crates/sdkwork-terminal-terminal-core",
  "crates/sdkwork-terminal-pty-runtime",
  "crates/sdkwork-terminal-session-runtime",
  "crates/sdkwork-terminal-shell-integration",
  "crates/sdkwork-terminal-resource-connectors",
  "crates/sdkwork-terminal-ai-cli-host",
  "crates/sdkwork-terminal-replay-store",
  "crates/sdkwork-terminal-protocol",
  "crates/sdkwork-terminal-control-plane",
  "crates/sdkwork-terminal-runtime-node",
  "crates/sdkwork-terminal-observability",
  "crates/sdkwork-terminal-config",
  "src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.2.40"
edition = "2021"
license = "Commercial"
authors = ["sdkwork"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
tauri-build = { version = "2" }





