[package]
name = "sdkwork-terminal-desktop-host"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "sdkwork_terminal_desktop_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
test = false

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.0"
sdkwork-terminal-pty-runtime = { path = "../crates/sdkwork-terminal-pty-runtime" }
sdkwork-terminal-protocol = { path = "../crates/sdkwork-terminal-protocol" }
sdkwork-terminal-replay-store = { path = "../crates/sdkwork-terminal-replay-store" }
sdkwork-terminal-resource-connectors = { path = "../crates/sdkwork-terminal-resource-connectors" }
sdkwork-terminal-session-runtime = { path = "../crates/sdkwork-terminal-session-runtime" }
sdkwork-terminal-control-plane = { path = "../crates/sdkwork-terminal-control-plane" }
