[package]
name = "sdkwork-terminal-runtime-node"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-terminal-session-runtime = { path = "../sdkwork-terminal-session-runtime" }
sdkwork-terminal-pty-runtime = { path = "../sdkwork-terminal-pty-runtime" }
sdkwork-terminal-replay-store = { path = "../sdkwork-terminal-replay-store" }
axum = { version = "0.7", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

[dev-dependencies]
http-body-util = "0.1"
sdkwork-terminal-shell-integration = { path = "../sdkwork-terminal-shell-integration" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
