[package]
name = "sdkwork-terminal-session-runtime"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
sdkwork-terminal-protocol = { path = "../sdkwork-terminal-protocol" }
sdkwork-terminal-observability = { path = "../sdkwork-terminal-observability" }
sdkwork-terminal-replay-store = { path = "../sdkwork-terminal-replay-store" }
