[package]
name = "sdkwork-terminal-control-plane"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde_json.workspace = true
sdkwork-terminal-protocol.workspace = true
sdkwork-terminal-replay-store.workspace = true
sdkwork-terminal-resource-connectors.workspace = true
sdkwork-terminal-session-runtime.workspace = true
