[package]
name = "sdkwork-terminal-session-runtime"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
sdkwork-terminal-protocol.workspace = true
sdkwork-terminal-observability.workspace = true
sdkwork-terminal-replay-store.workspace = true
